[tool.poetry]
name = "tutorial-pybr"
version = "0.1.0"
description = ""
authors = ["anderson89marques <andersonoanjo18@gmail.com>"]
readme = "README.md"
packages = [{include = "tutorial_pybr"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
httpx = "^0.23.1"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
httpie = "^3.2.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
